[enh] select-vessel.modal: new vessel tab is completely hidden by default [fix] scripts eol

--- a/src/global.scss
+++ b/src/global.scss
@@ -787,9 +787,6 @@ mat-tab-group.mat-tab-group-header-pagination-hidden .mat-tab-header-pagination 
   display: none !important;
 }
 
-.mat-tab-label.mat-tab-disabled {
-  display: none;
-}
 
 // --------------------------------------------------
 // Material menu
